--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <img src="portfolio_img.jpg" width = "200px">
-
+    
+    <div class="about">
+        <img src="portfolio_img.jpg">
+        Colorado State Graduate in Computer Science and Mathematics. 
+        College course experience includes coding in Java, Javascript, 
+        and Python. Interested in Software Engineering and Web Development 
+        with experience in Github and Zenhub under a CMMI framework 
+        and Scrum methodology.</div>
 
   </body>
 </html>
