adds sticky header

--- a/index.html
+++ b/index.html
@@ -10,14 +10,39 @@
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    
-    <div class="about">
+    <header>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li>Projects</li>
+            <li>Qualifications</li>
+        </ul>
+    </header>
+
+    <div class="about" id="about">
         <img src="portfolio_img.jpg">
         Colorado State Graduate in Computer Science and Mathematics. 
         College course experience includes coding in Java, Javascript, 
         and Python. Interested in Software Engineering and Web Development 
         with experience in Github and Zenhub under a CMMI framework 
         and Scrum methodology.</div>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
   </body>
 </html>
