adds footer and some other aesthetic changes

--- a/index.html
+++ b/index.html
@@ -1,48 +1,102 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kris Buckey's portfolio</title>
-    <!-- The style.css file allows you to change the look of your web pages.
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kris Buckey's portfolio</title>
+  <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
-    <link href="style.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
-    <header>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li>Projects</li>
-            <li>Qualifications</li>
-        </ul>
-    </header>
+  <link href="style.css" rel="stylesheet" type="text/css" media="all">
+</head>
 
-    <div class="about" id="about">
-        <img src="portfolio_img.jpg">
-        Colorado State Graduate in Computer Science and Mathematics. 
-        College course experience includes coding in Java, Javascript, 
-        and Python. Interested in Software Engineering and Web Development 
-        with experience in Github and Zenhub under a CMMI framework 
-        and Scrum methodology.</div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi, ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!</p>
-  </body>
+<body>
+  <div class="navbar">
+    <header>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li>Projects</li>
+        <li>Qualifications</li>
+      </ul>
+    </header>
+  </div>
+
+  <div class="about" id="about">
+    <img src="portfolio_img.jpg">
+    Colorado State Graduate in Computer Science and Mathematics.
+    College course experience includes coding in Java, Javascript,
+    and Python. Interested in Software Engineering and Web Development
+    with experience in Github and Zenhub under a CMMI framework
+    and Scrum methodology. Specific interest in web accessibility.
+  </div>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
+    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
+  </p>
+  <div class="footer">
+    <footer>
+      <ul> 
+        <li><a href="mailto:kbuckey12@gmail.com">Email</a></li>
+        <li><a href="https://www.linkedin.com/in/kris-buckey/">LinkedIn</a></li>
+        <li><a href="https://github.com/kbuckey">Github</a></li>
+      </ul>
+      <span id="copyright">Created by Kris Buckey, 2025</span>
+    </footer>
+  </div>
+</body>
+
 </html>
