adds a projects table and minor aesthetic changes

--- a/index.html
+++ b/index.html
@@ -12,81 +12,39 @@
 </head>
 
 <body>
-  <div class="navbar">
+  <div class="header">
     <header>
       <ul>
         <li><a href="#about">About</a></li>
-        <li>Projects</li>
+        <li><a href="#projects">Projects</a></li>
         <li>Qualifications</li>
       </ul>
     </header>
   </div>
 
   <div class="about" id="about">
-    <img src="portfolio_img.jpg">
-    Colorado State Graduate in Computer Science and Mathematics.
+    <img src="portfolio_img.jpg" id="aboutphoto">
+    <p>Colorado State Graduate in Computer Science and Mathematics.
     College course experience includes coding in Java, Javascript,
     and Python. Interested in Software Engineering and Web Development
     with experience in Github and Zenhub under a CMMI framework
-    and Scrum methodology. Specific interest in web accessibility.
+    and Scrum methodology. Specific interest in web accessibility.</p>
   </div>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam temporibus possimus maiores nisi animi,
-    ipsum natus provident nostrum hic amet ea deleniti similique eveniet voluptatibus saepe! Perferendis, enim pariatur!
-  </p>
+  <div class="projects" id="projects">
+    <table id="projects-table">
+      <tr class="projects-header-row">
+        <th>Preview</th>
+        <th>Project Name</th>
+        <th>Completed</th>
+      </tr>
+      <tr class="projects-data-row">
+        <td><img src="firsttetris_preview.png" id="firsttetris_preview"></td>
+        <td><a href="firsttetris.html">Basic Tetris</a> - First Attempt</td>
+        <td>July 2025</td>
+      </tr>
+
+    </table>
+  </div>
   <div class="footer">
     <footer>
       <ul> 
