makes about section responsive to all three screen types

--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
       </ul>
     </header>
   </div>
-
-  <div class="about" id="about">
+  
+  <div class="about" id="about-wrap">
+    <div class="about-text" id="about-header"><h3>Hi, I'm Kris.</h3><span>Software Developer and Web Designer</span></div>
     <img src="portfolio_img.jpg" id="aboutphoto">
-    <p>Colorado State Graduate in Computer Science and Mathematics.
+    <div class="about-text" id="about-desc"><p>Colorado State Graduate in Computer Science and Mathematics.
     College course experience includes coding in Java, Javascript,
-    and Python. Interested in Software Engineering and Web Development
+    and Python. Self-taught in HTML and CSS practices. Interested in Software Engineering and Web Development
     with experience in Github and Zenhub under a CMMI framework
-    and Scrum methodology. Specific interest in web accessibility.</p>
+    and Scrum methodology. Specific interest in web accessibility.</p></div>
   </div>
+
   <div class="projects" id="projects">
     <table id="projects-table">
       <tr class="projects-header-row">
@@ -47,7 +49,7 @@
   </div>
   <div class="footer">
     <footer>
-      <ul> 
+      <ul>        
         <li><a href="mailto:kbuckey12@gmail.com">Email</a></li>
         <li><a href="https://www.linkedin.com/in/kris-buckey/">LinkedIn</a></li>
         <li><a href="https://github.com/kbuckey">Github</a></li>
