adds a box layout for projects on mobile and tablet

--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
     and Scrum methodology. Specific interest in web accessibility.</p></div>
   </div>
 
+  <div class="project-list" id="project-list-container">
+    <div class="project-list-item">Basic Tetris - First Attempt
+      <ul>
+        <li><a href="firsttetris.html">Project Page</a></li>
+        <li>Completed July 2025</li>
+        </ul>
+    </div>
+    <div class="project-list-item">Basic Tetris - Second Attempt
+      <ul>
+        <li><a href="">Project Page</a></li>
+        <li>Completed August 2025</li>
+        </ul>
+    </div>
+  </div>
+
+
   <div class="projects" id="projects">
     <table id="projects-table">
       <tr class="projects-header-row">
