--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-
+<!--TODO: add meta tags -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kris Buckey's portfolio</title>
+  <title>Kris Buckey's Portfolio</title>
   <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
   <link href="style.css" rel="stylesheet" type="text/css" media="all">
 </head>
-
+<!--TODO: fix header links to anchor points  -->
 <body>
   <div class="header">
     <header>
